# SPOJ-2

./: .gitignore  AL_04_03.cpp  BEZPRZEC.cpp  BFN1.cpp  BFNTEST.cpp  BFNTEST10.cpp  BFNTEST11.cpp  BFNTEST9b.cpp  BINOMS.cpp  CALC.cpp  CALC2.cpp  CHAOS.cpp  CHAOSb.cpp  CHAOSc.cpp  CHSTAMPS.cpp  CHSTAMPSb.cpp  CMakeLists.txt  DOUGHNUT.cpp  ETI06F1.cpp  ETI06F2.cpp  ETI06F3.cpp  ETI06F3b.cpp  ETI06F3c.cpp  ETI07E5.cpp  ETI07E5a.cpp  ETI07E8.cpp  EUCGAME.cpp  FANGEN.cpp  FCTRL3.cpp  FIB.cpp  FLAMASTE.cpp  FR_02_01.cpp  FR_02_10.cpp  FZI_STEF.cpp  GLUTTON.cpp  JGGHACK.cpp  JPESEL.cpp  JROWLIN.cpp  JSPACE.cpp  JSUMDUZE.cpp  (+72 more)
reuse/: binInsertion.cpp
